[workspace]
resolver = "3"
members = ["tfluna", "tfluna_pan_tilt"]

[workspace.package]
name = "rpi-lidar"
version = "0.1.0"
rust-version = "1.86"
edition = "2024"
authors = ["Anes Benmerzoug <anes.benmerzoug@gmail.com>"]
license = "LGPL-2.1"
repository = "https://github.com/AnesBenmerzoug/rpi-tfluna-lidar"

[workspace.dependencies]
rerun = "0.24.1"
rppal = "0.22.1"
