[package]
name = "tfluna"
version = "0.1.0"
# Inherit from workspace
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rerun = { workspace = true }
rppal = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "tfluna"
path = "src/bin/main.rs"
