[package]
name = "tfluna_data_analysis"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
default-run = "main"

[dependencies]
rerun = { workspace = true }
nalgebra = "0.33.2"
itertools = "0.14.0"
polars = { version = "0.52.0", features = [
    "dtype-full",
    "timezones",
    "lazy",
    "ipc",
] }
polars-io = { version = "0.52.0", features = ["csv"] }
