[package]
name = "tfluna_pan_tilt"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rerun = { workspace = true }
rppal = { workspace = true, features = ["hal"] }
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["std"] }
embedded-tfluna = "0.2.0"
pwm-pca9685 = "1.0.0"
colorgrad = "0.7.2"
