[package]
name = "tfluna_with_servos"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rerun = { workspace = true }
rppal = { workspace = true, features = ["hal"] }
embedded-tfluna = { path = "/home/anesbenmerzoug/personaldir/code/embedded-tfluna" }
colorgrad = "0.7.2"
